--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -10,7 +10,7 @@
     <string name="add_group_title">Jauns gr. nosaukums</string>
     <string name="algorithm">Algoritms</string>
     <string name="algorithm_colon">Algoritms:</string>
-    <string name="app_name">Paroles</string>
+    <string name="app_name">Smart KeePass</string>
     <string name="app_timeout">Pielikuma taimauts</string>
     <string name="app_timeout_summary">Bloķēšanas taimauts, kad programma nav aktīva.</string>
     <string name="application">Programma</string>
