--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -27,7 +27,7 @@ along with KeePassDroid. If not, see <http://www.gnu.org/licenses/>.
     <string name="add_group_title">Dodaj grupę</string>
     <string name="algorithm">Algorytm</string>
     <string name="algorithm_colon">Algorytm:</string>
-    <string name="app_name">KeePassDroid</string>
+    <string name="app_name">Smart KeePass</string>
     <string name="app_timeout">Czas wygaśnięcia aplikacji</string>
     <string name="app_timeout_summary">Czas do zablokowania bazy danych przy bezczynności aplikacji.</string>
     <string name="application">Aplikacja</string>
