--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -28,7 +28,7 @@
     <string name="add_group_title">Додати групу</string>
     <string name="algorithm">Алгоритм</string>
     <string name="algorithm_colon">Алгоритм:</string>
-    <string name="app_name">KeePassDroid</string>
+    <string name="app_name">Smart KeePass</string>
     <string name="app_timeout">Тайм-аут програми</string>
     <string name="app_timeout_summary">Час перед закриттям бази даних, коли програма є неактивною.</string>
     <string name="application">Програма</string>
